feat: add admin page, role-based JWT, and security hardening
- Add MemberRole enum and role field to Member domain model
- Embed role claim in JWT access token; JwtTokenProviderImpl updated
- Add AdminApiController (GET /members, PATCH role, GET stats)
- Add AdminService, AdminMemberResponse, AdminStatsResponse
- Add LoadMemberPort.findAll/count and UpdateMemberPort.updateMemberRole
- Add frontend admin views (AdminDashboardView, AdminMembersView)
- Add authStore role state + isAdmin getter via JWT decode (jwt.js)
- Add router guard: requiresAdmin meta redirects non-admins to /login
- Add CORS config bean with explicit allowed headers (Authorization, Content-Type, Accept)
- Add security headers (X-Frame-Options, HSTS, CSP, X-Content-Type-Options)
- Restrict actuator: only /health public, rest requires ADMIN authority
- Remove JWT_SECRET hardcoded default from application.yml

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>